# sfera

./: .hgignore  AUTHORS.txt  CMakeLists.txt  Configuration.cmake  README.txt
cmake/: AssembleBinDirs.cmake  Dependencies.cmake  PlatformSpecific.cmake
cmake/SpecializedConfig/: Config_Dade-win32.cmake  Config_Dade-win64.cmake  Config_Dade.cmake
cmake/Utils/: FindPkgMacros.cmake
gamedata/cfgs/: cpu.cfg  dade.cfg  default.cfg  example.cfg  high.cfg  low.cfg
gamedata/packs/Benchmark/: lvl01-HyperSphere.lvl  scene_build.pl
gamedata/packs/Sfera/: lvl01-Intro.lvl  lvl01-Single.lvl  lvl02-Gravity.lvl  lvl02-Intro.lvl  lvl03-OldSchool.lvl  lvl04-HyperSphere.lvl
gamedata/scores/: readme.txt
src/: CMakeLists.txt  displaysession.cpp  epsilon.cpp  gameconfig.cpp  gamelevel.cpp  gameplayer.cpp  gamesession.cpp  sfera.cpp  sferacfg.h  sferacfg.h.in
src/acceleretor/: bvhaccel.cpp
src/geometry/: matrix4x4.cpp  ray.cpp  sphere.cpp  transform.cpp
src/include/: displaysession.h  epsilon.h  gameconfig.h  gamelevel.h  gameplayer.h  gamesession.h  gamesphere.h  sfera.h  sferacfg.h  sferacfg.h.in
src/include/acceleretor/: acceleretor.h  bvhaccel.h
src/include/geometry/: matrix4x4.h  normal.h  point.h  ray.h  sphere.h  transform.h  uv.h  vector.h  vector_normal.h
src/include/physic/: gamephysic.h
src/include/pixel/: framebuffer.h  spectrum.h  tonemap.h
src/include/renderer/: levelrenderer.h
src/include/renderer/cpu/: cpurenderer.h  multicpurenderer.h  singlecpurenderer.h
src/include/renderer/ocl/: compiledscene.h  oclrenderer.h
src/include/renderer/ocl/kernels/: kernels.h
src/include/sdl/: camera.h  editaction.h  light.h  material.h  scene.h  sdl.h  texmap.h
src/include/utils/: mc.h  oclutils.h  packhighscore.h  packlevellist.h  packlist.h  properties.h  randomgen.h  rendertext.h  utils.h
src/physic/: gamephysic.cpp
src/pixel/: framebuffer.cpp  tonemap.cpp
src/renderer/cpu/: cpurenderer.cpp  multicpurenderer.cpp  singlecpurenderer.cpp
src/renderer/ocl/: compiledscene.cpp  oclrenderer.cpp
src/renderer/ocl/kernels/: kernel_core.cl  kernel_core.cpp
src/sdl/: camera.cpp  light.cpp  material.cpp  scene.cpp  texmap.cpp
src/utils/: oclutils.cpp  packhighscore.cpp  packlevellist.cpp  packlist.cpp  properties.cpp  rendertext.cpp
